--- a/src/main/resources/assets/bamboo_blocks/lang/de_de.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/de_de.json
@@ -23,7 +23,7 @@
   "block.bamboo_blocks.bamboo_sign": "Bambusschild",
   "block.bamboo_blocks.bamboo_wall_sign": "Bambuswandschild",
   "block.bamboo_blocks.bamboo_ladder": "Bambusleiter",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Horizontale Bambusbretter",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Verticale Bambusbretter",
   "block.bamboo_blocks.trapped_bamboo_chest": "Redstone-Bambustruhe",
   "block.bamboo_blocks.bamboo_vertical_slab": "Vertikale Bambusstufe",
   "block.bamboo_blocks.bamboo_bookshelf": "Bambusbücherregal",
