--- a/src/main/resources/assets/bamboo_blocks/lang/en_pt.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/en_pt.json
@@ -13,7 +13,7 @@
   "block.bamboo_blocks.reed_thatch_stairs": "Roof o' Reed Stairs",
   "block.bamboo_blocks.reed_thatch_slab": "Roof o' Reed Slab",
   "block.bamboo_blocks.bamboo_ladder": "Bambarr Climbin' Planks",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Tipsy Planks o' Bambarrr",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Tipsy Planks o' Bambarrr",
   "block.bamboo_blocks.trapped_bamboo_chest": "Trapped Coffer o' Bambarr",
   "block.bamboo_blocks.bamboo_vertical_slab": "Standin' Slab o' Bambarr",
   "block.bamboo_blocks.reed_thatch_vertical_slab": "Roof o' Reed Standin' Slab",
