--- a/src/main/resources/assets/bamboo_blocks/lang/fi_fi.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/fi_fi.json
@@ -23,7 +23,7 @@
   "block.bamboo_blocks.bamboo_sign": "Bamboo Sign",
   "block.bamboo_blocks.bamboo_wall_sign": "Bamboo Wall Sign",
   "block.bamboo_blocks.bamboo_ladder": "Bambutikas",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Pystysuorat bambulankut",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Pystysuorat bambulankut",
   "block.bamboo_blocks.trapped_bamboo_chest": "Ansoitettu bambuarkku",
   "block.bamboo_blocks.bamboo_vertical_slab": "Pystysuora bambulaatta",
   "block.bamboo_blocks.bamboo_bookshelf": "Bambukirjahylly",
