--- a/src/main/resources/assets/bamboo_blocks/lang/fr_fr.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/fr_fr.json
@@ -19,7 +19,7 @@
   "block.bamboo_blocks.bamboo_sign": "Pancarte en bambou",
   "block.bamboo_blocks.bamboo_wall_sign": "Pancarte murale en bambou",
   "block.bamboo_blocks.bamboo_ladder": "échelle en bambou",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Planches verticale en bambou",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Planches verticale en bambou",
   "block.bamboo_blocks.trapped_bamboo_chest": "Coffre piégé en bambou",
   "block.bamboo_blocks.bamboo_vertical_slab": "Dalle verticale en bambou",
   "block.bamboo_blocks.bamboo_bookshelf": "Bibliothèque en bambou",
