--- a/src/main/resources/assets/bamboo_blocks/lang/pt_br.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/pt_br.json
@@ -19,7 +19,7 @@
   "block.bamboo_blocks.bamboo_sign": "Placa de bambu",
   "block.bamboo_blocks.bamboo_wall_sign": "Placa de bambu na parede",
   "block.bamboo_blocks.bamboo_ladder": "Escada de mão de bambu",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Tábuas horizontais de bambu",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Tábuas horizontais de bambu",
   "block.bamboo_blocks.trapped_bamboo_chest": "Baú de bambu com armadilha",
   "block.bamboo_blocks.bamboo_vertical_slab": "Laje vertical de bambu",
   "block.bamboo_blocks.bamboo_bookshelf": "Estante de livros de bambu",
