--- a/src/main/resources/assets/bamboo_blocks/lang/ru_ru.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/ru_ru.json
@@ -19,7 +19,7 @@
   "block.bamboo_blocks.bamboo_sign": "Бамбуковая табличка",
   "block.bamboo_blocks.bamboo_wall_sign": "Бамбуковая настенная табличка",
   "block.bamboo_blocks.bamboo_ladder": "Бамбуковая лестница",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Горизонтальные бамбуковые доски",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Горизонтальные бамбуковые доски",
   "block.bamboo_blocks.trapped_bamboo_chest": "Бамбуковый сундук-ловушка",
   "block.bamboo_blocks.bamboo_vertical_slab": "Бамбуковая вертикальная плита",
   "block.bamboo_blocks.bamboo_bookshelf": "Бамбуковая книжная полка",
