--- a/src/main/resources/assets/bamboo_blocks/lang/es_es.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/es_es.json
@@ -23,7 +23,7 @@
   "block.bamboo_blocks.bamboo_sign": "Cartel de bambú",
   "block.bamboo_blocks.bamboo_wall_sign": "Cartel de bambú en pared",
   "block.bamboo_blocks.bamboo_ladder": "Escalera de mano de bambú",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Madera horizontal de bambú",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Madera vertical de bambú",
   "block.bamboo_blocks.trapped_bamboo_chest": "Cofre trampa de bambú",
   "block.bamboo_blocks.bamboo_vertical_slab": "Losa vertical de bambú",
   "block.bamboo_blocks.bamboo_bookshelf": "Librería de bambú",
