--- a/src/main/resources/assets/bamboo_blocks/lang/pl_pl.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/pl_pl.json
@@ -13,7 +13,7 @@
   "block.bamboo_blocks.reed_thatch_stairs": "Schody z trzcinowego poszycia",
   "block.bamboo_blocks.reed_thatch_slab": "Płyta z trzcinowego poszycia",
   "block.bamboo_blocks.bamboo_ladder": "Bambusowa drabina",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Pionowe bambusowe deski",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Pionowe bambusowe deski",
   "block.bamboo_blocks.bamboo_chest": "Bambusowa skrzynia",
   "block.bamboo_blocks.trapped_bamboo_chest": "Bambusowa skrzynia pułapka",
   "block.bamboo_blocks.bamboo_vertical_slab": "Pionowa bambusowa płyta",
