--- a/src/main/resources/assets/bamboo_blocks/lang/pl_pl.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/pl_pl.json
@@ -28,7 +28,7 @@
   "block.bamboo_blocks.bamboo_vertical_slab": "Pionowa bambusowa płyta",
   "block.bamboo_blocks.bamboo_bookshelf": "Bambusowa biblioteczka",
   "block.bamboo_blocks.bamboo_chest": "Bambusowa skrzynia",
-  "block.bamboo_blocks.bamboo_trapped_chest": "Bambusowa skrzynia-pułapk",
+  "block.bamboo_blocks.bamboo_trapped_chest": "Bambusowa skrzynia-pułapka",
   "block.bamboo_blocks.bamboo_beehive": "Bambusowy ul",
 
   "block.bamboo_blocks.reed_thatch": "Trzcinowa strzecha",
