--- a/src/main/resources/assets/bamboo_blocks/lang/pt_br.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/pt_br.json
@@ -7,6 +7,10 @@
   "block.bamboo_blocks.soul_bamboo_wall_torch": "Tocha de bambu das almas de parede",
   "block.bamboo_blocks.potted_soul_bamboo_torch": "Tocha de bambu das almas envasada",
   
+   "block.bamboo_blocks.ender_bamboo_torch": "Tocha de bambu de ender",
+  "block.bamboo_blocks.ender_bamboo_wall_torch": "Tocha de bambu de ender de parede",
+  "block.bamboo_blocks.potted_ender_bamboo_torch": "Tocha de bambu de ender envasada",
+  
   "block.bamboo_blocks.bamboo_planks": "Tábuas de bambu",
   "block.bamboo_blocks.bamboo_stairs": "Escadas de bambu",
   "block.bamboo_blocks.bamboo_slab": "Laje de bambu",
@@ -17,9 +21,9 @@
   "block.bamboo_blocks.bamboo_button": "Botão de bambu",
   "block.bamboo_blocks.bamboo_pressure_plate": "Placa de pressão de bambu",
   "block.bamboo_blocks.bamboo_sign": "Placa de bambu",
-  "block.bamboo_blocks.bamboo_wall_sign": "Placa de bambu na parede",
+  "block.bamboo_blocks.bamboo_wall_sign": "Placa de bambu de parede",
   "block.bamboo_blocks.bamboo_ladder": "Escada de mão de bambu",
-  "block.bamboo_blocks.vertical_bamboo_planks": "Tábuas horizontais de bambu",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Tábuas verticais de bambu",
   "block.bamboo_blocks.trapped_bamboo_chest": "Baú de bambu com armadilha",
   "block.bamboo_blocks.bamboo_vertical_slab": "Laje vertical de bambu",
   "block.bamboo_blocks.bamboo_bookshelf": "Estante de livros de bambu",
@@ -27,10 +31,10 @@
   "block.bamboo_blocks.bamboo_trapped_chest": "Baú de bambu com armadilha",
   "block.bamboo_blocks.bamboo_beehive": "Colmeia artificial de bambu",
 
-  "block.bamboo_blocks.reed_thatch": "Palha de junco",
-  "block.bamboo_blocks.reed_thatch_stairs": "Escadas de palha de junco",
-  "block.bamboo_blocks.reed_thatch_slab": "Laje de palha de junco",
-  "block.bamboo_blocks.reed_thatch_vertical_slab": "Laje vertical de palha de junco",
+  "block.bamboo_blocks.reed_thatch": "Colmo de junco",
+  "block.bamboo_blocks.reed_thatch_stairs": "Escadas de colmo de junco",
+  "block.bamboo_blocks.reed_thatch_slab": "Laje de colmo de junco",
+  "block.bamboo_blocks.reed_thatch_vertical_slab": "Laje vertical de colmo de junco",
 
-  "item.bamboo_blocks.bamboo_boat": "Bote bambu"
+  "item.bamboo_blocks.bamboo_boat": "Bote de bambu"
 }
