--- a/src/main/resources/assets/bamboo_blocks/lang/es_es.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/es_es.json
@@ -11,7 +11,7 @@
   "block.bamboo_blocks.ender_bamboo_wall_torch": "Antorcha de bambú de ender en pared",
   "block.bamboo_blocks.potted_ender_bamboo_torch": "Maceta con antorcha de bambú de ender",
 
-  "block.bamboo_blocks.bamboo_planks": "Madera de bambú",
+  "block.bamboo_blocks.bamboo_planks": "Tablones de bambú",
   "block.bamboo_blocks.bamboo_stairs": "Escaleras de bambú",
   "block.bamboo_blocks.bamboo_slab": "Losa de bambú",
   "block.bamboo_blocks.bamboo_fence": "Valla de bambú",
@@ -23,7 +23,7 @@
   "block.bamboo_blocks.bamboo_sign": "Cartel de bambú",
   "block.bamboo_blocks.bamboo_wall_sign": "Cartel de bambú en pared",
   "block.bamboo_blocks.bamboo_ladder": "Escalera de mano de bambú",
-  "block.bamboo_blocks.vertical_bamboo_planks": "Madera vertical de bambú",
+  "block.bamboo_blocks.vertical_bamboo_planks": "Tablones de bambú verticales",
   "block.bamboo_blocks.trapped_bamboo_chest": "Cofre trampa de bambú",
   "block.bamboo_blocks.bamboo_vertical_slab": "Losa vertical de bambú",
   "block.bamboo_blocks.bamboo_bookshelf": "Librería de bambú",
